Use Aysnc execute method